fix: layout issues, z-index and registration logic

--- a/form.css
+++ b/form.css
@@ -93,6 +93,7 @@ body {
   border-bottom: 1px var(--color-primary-blue) solid;
   padding-left: 0px;
   padding-right: 0px;
+  z-index: 1000;
 }
 
 .NameOfProject {
